added social links

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 ﻿<!doctype html>
-<html class="no-js">
+<html>
 <head>
   <meta charset="utf-8">
-  <title>Daniel Hunt - Hi</title>
-</head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="language" content="en" />
+	<meta name="description" content="Daniel Hunt" />
 
+	<link rel="stylesheet" type="text/css" href="css/main.css" media="screen"/>
+
+  <title>Daniel Hunt</title>
+</head>
 <body>
 <script type="text/javascript">
 
@@ -20,5 +25,41 @@
   })();
 
 </script>
+
+<div id="wrapper">
+	<div class="container">
+		<div id="content">
+		
+			<h1>Daniel Hunt</h1>
+			<h2>This placeholder will be removed as soon as I've sorted out my blog</h2>
+
+			<div id="socialz">
+				<h3 id="socialz_header">Well, seeing as you're already here...</h3>
+
+				<div id="choice_icons">
+					<div class="choice">
+						<a href="https://www.facebook.com/daniel.hunt.7798574"><img src="images/facebook.png" alt="Facebook" /></a>
+						<a class="choice_link_text" href="https://www.facebook.com/daniel.hunt.7798574">Facebook</a>
+					</div>
+					<div class="choice">
+						<a href="http://twitter.com/danielhunt"><img src="images/twitter.png" alt="@danielhunt" /></a>
+						<a class="choice_link_text" href="http://twitter.com/danielhunt">@danielhunt</a>
+					</div>
+					<div class="choice">
+						<a href="http://ie.linkedin.com/in/danielhunt"><img src="images/linkedin.png" alt="linkedin" /></a>
+						<a class="choice_link_text" href="http://ie.linkedin.com/in/danielhunt">LinkedIn</a>
+					</div>
+					<div class="choice">
+						<a href="http://www.last.fm/user/duranai"><img src="images/lastfm.png" alt="lastfm" /></a>
+						<a class="choice_link_text" href="http://www.last.fm/user/duranai">Last.fm</a>
+					</div>
+				</div>
+
+				<div class="clear"></div>
+			</div>
+		</div>
+	</div><!-- content -->
+</div>
+
 </body>
 </html>
