--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="container">
 		<div id="content">
 		
-			<h1>Daniel Hunt</h1>
+			<h1><img src="images/profile_pic.jpg" width="50px" height="50px" /> Daniel Hunt</h1>
 
 			<div id="socialz">
 				<h2 id="socialz_header">Well, seeing as you're already here...</h2>
