--- a/index.html
+++ b/index.html
@@ -1,81 +1,106 @@
 ﻿<!doctype html>
 <html>
 <head>
+  <title>Daniel Hunt</title>
+
   <meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="language" content="en" />
 	<meta name="description" content="Daniel Hunt" />
+	<meta name="viewport" content="width=device-width">
 
 	<link rel="stylesheet" type="text/css" href="css/main.css" media="screen"/>
+	<link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css" media="all">
 
-  <title>Daniel Hunt</title>
+	<!--[if lt IE 9]>
+	<script src="js/html5shiv.js"></script>
+	<![endif]-->
+	
+	<script type="text/javascript">
+
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-24981077-1']);
+		_gaq.push(['_setDomainName', '.danielhunt.ie']);
+		_gaq.push(['_trackPageview']);
+
+		(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+	</script>
 </head>
 <body>
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-24981077-1']);
-  _gaq.push(['_setDomainName', '.danielhunt.ie']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-
-<div id="wrapper">
-	<div class="container">
-		<div id="content">
-		
-			<h1><img src="images/profile_pic.jpg" width="50px" height="50px" /> Daniel Hunt</h1>
-
-			<div id="socialz">
-				<h2 id="socialz_header">Well, seeing as you're already here...</h2>
-
-				<div class="choice_icons">
-					<figure class="choice">
-						<a href="https://www.facebook.com/daniel.hunt.7798574">
-							<img src="images/socialmediaicons-1.10.0/facebook-48x48.png" alt="Facebook" />
-							<figcaption>Facebook</figcaption>
-						</a>
-					</figure>
-					<figure class="choice">
-						<a href="http://twitter.com/danielhunt">
-							<img src="images/socialmediaicons-1.10.0/twitter-48x48.png" alt="@danielhunt" />
-							<figcaption>@danielhunt</figcaption>
-						</a>
-					</figure>
-					<figure class="choice">
-						<a href="http://ie.linkedin.com/in/danielhunt">
-							<img src="images/socialmediaicons-1.10.0/linkedin-48x48.png" alt="linkedin" />
-							<figcaption>LinkedIn</figcaption>
-						</a>
-					</figure>
-				</div>
-
-				<div class="choice_icons">
-					<figure class="choice">
-						<a href="http://www.last.fm/user/duranai">
-							<img src="images/socialmediaicons-1.10.0/lastfm-48x48.png" alt="lastfm" />
-							<figcaption>Last.fm</figcaption>
-						</a>
-					</figure>
-					<figure class="choice">
-						<a href="http://github.com/danielhunt">
-							<img src="images/socialmediaicons-1.10.0/github-48x48.png" alt="Github" />
-							<figcaption>Github</figcaption>
-						</a>
-					</figure>
-				</div>
-
-				<div class="clear"></div>
+	<header>
+		<div class="wrapper">
+			<div class="logo">
+				<a class="float-l" href="/"><img class="profile_pic" src="images/profile_pic.jpg" width="36px" height="36px" /> <strong id="edition-name">Daniel Hunt</strong></a>
 			</div>
-		</div>
-	</div><!-- content -->
-</div>
 
+			<nav id="menu">
+				<ul>
+<!--
+					<li><a href="/blog">Blog</a></li>
+					<li><a href="/cv">Resume</a></li>
+-->
+					<li><a href="/contact">Contact</a></li>
+					<li class="social"><a href="http://ie.linkedin.com/in/danielhunt" title="LinkedIn" alt="LinkedIn" target="_blank"><i class="icon-linkedin-sign"></i></a></li>
+					<li class="social"><a href="http://github.com/danielhunt" title="GitHub" alt="GitHub" target="_blank"><i class="icon-github"></i></a></li>
+					<li class="social"><a href="http://twitter.com/danielhunt" title="Twitter" alt="Twitter" target="_blank"><i class="icon-twitter"></i></a></li>
+					<li class="social"><a href="https://www.facebook.com/daniel.hunt.7798574" title="FaceBook" alt="FaceBook" target="_blank"><i class="icon-facebook"></i></a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+
+	<section class="page">
+		<section>
+			<h2>PHP, Javascript, Servers &amp; a dubious taste in <a href="http://www.last.fm/user/duranai" title="last.fm" alt="last.fm">music</a></h2>
+
+			<p class="subheading">"Daniel's primary role over the past 8 years has been as a PHP developer.<br />
+<br />
+His initial experience, gained through the building and running of various online communities has been added to and improved upon through his work at a number of high profile, well respected international companies, such as <a href="http://mtld.mobi/" title="dotMobi" alt="dotMobi">dotMobi</a>, <a href="http://www.hostelworld.com/" title="Hostelworld" alt="Hostelworld">Web Reservations International</a> and <a href="http://version1.ie/" title="Version1" alt="Version1">Version1</a>.<br />
+<br />
+On top of his PHP skills is a deep knowledge and understanding of Linux based system administration and cloud operations - Amazon EC2 in particular."</p>
+		</section>
+
+		<section>
+			<h3>What have others said about Daniel?</h3>
+			<div class="columns">
+				<div class="left_column">
+					<blockquote>test</blockquote>
+					<p>&ldquo;Daniel was an enthusiastic, hard working member of the team and his positive attitude was infectious across each of our engineers ...&rdquo;</p>
+					— Paul Phillips, CTO, <a href="http://scrazzl.com">scrazzl.com</a>
+				</div>
+				
+				<div class="right_column">
+					<p>&ldquo;... His energy, positive attitude and readiness to put his hand to things was extremely helpful ...&rdquo;</p>
+					— Jo Rabin, CTO, <a href="http://mtld.mobi">dotMobi</a>
+				</div>
+			</div>
+
+			<div class="columns">
+				<div class="left_column">
+					<p>&ldquo;... [what makes Daniel so valuable] is that he has confidence and courage, always unafraid to voice his opinion when the easy path is to be silent and go with the flow ...&rdquo;</p>
+					— Trey Harvin, CEO, <a href="http://mtld.mobi">dotMobi</a>
+				</div>
+				
+				<div class="right_column">
+					<p>&ldquo;... Dan proved to an enthusiastic, highly motivated and valued member of the <a href="http://deviceatlas.com" title="DeviceAtlas" alt="DeviceAtlas">DeviceAtlas</a> team. Definitely a valuable resource for any company to have on board ...&rdquo;</p>
+					— Martin Pegman, Operations Manager, <a href="http://mtld.mobi">dotMobi</a>
+				</div>
+			</div>
+		</section>
+	</section>
+
+	<footer>
+		<div class="wrapper">
+			<h5>&copy; Daniel Hunt - 2013</h5>
+			<p>Design shamelessly lifted from <a href="http://convertkit.com/">ConvertKit</a></p>
+			<p>Icons: <a href="http://fortawesome.github.com/Font-Awesome/">FontAwesome</a> &amp; <a href="https://github.com/paulrobertlloyd/socialmediaicons">SocialMediaIcons</a></p>
+		</div>
+	</footer>
+
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 </body>
 </html>
