CSS fixes for mobile Added email address to contact link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<li><a href="/blog">Blog</a></li>
 					<li><a href="/cv">Resume</a></li>
 -->
-					<li><a href="/contact">Contact</a></li>
+					<li><a href="mailto:daniel@danielhunt.ie">Contact</a></li>
 					<li class="social"><a href="http://ie.linkedin.com/in/danielhunt" title="LinkedIn" alt="LinkedIn" target="_blank"><i class="icon-linkedin-sign"></i></a></li>
 					<li class="social"><a href="http://github.com/danielhunt" title="GitHub" alt="GitHub" target="_blank"><i class="icon-github"></i></a></li>
 					<li class="social"><a href="http://twitter.com/danielhunt" title="Twitter" alt="Twitter" target="_blank"><i class="icon-twitter"></i></a></li>
