Make menu visible on mobile

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<header>
 		<div class="wrapper">
 			<div class="logo">
-				<a class="float-l" href="/"><img class="profile_pic" src="images/profile_pic.jpg" width="36px" height="36px" /> <strong id="edition-name">Daniel Hunt</strong></a>
+				<a class="float-l" href="/"><img class="profile_pic" src="images/profile_pic.jpg" width="36px" height="36px" /><strong id="name"> Daniel Hunt</strong></a>
 			</div>
 
 			<nav id="menu">
