layout fixes for quotes

--- a/index.html
+++ b/index.html
@@ -67,25 +67,22 @@ On top of his PHP skills is a deep knowledge and understanding of Linux based sy
 		<section>
 			<h3>What have others said about Daniel?</h3>
 			<div class="columns">
-				<div class="left_column">
-					<blockquote>test</blockquote>
+				<div class="col">
 					<p>&ldquo;Daniel was an enthusiastic, hard working member of the team and his positive attitude was infectious across each of our engineers ...&rdquo;</p>
 					— Paul Phillips, CTO, <a href="http://scrazzl.com">scrazzl.com</a>
 				</div>
-				
-				<div class="right_column">
-					<p>&ldquo;... His energy, positive attitude and readiness to put his hand to things was extremely helpful ...&rdquo;</p>
-					— Jo Rabin, CTO, <a href="http://mtld.mobi">dotMobi</a>
-				</div>
-			</div>
 
-			<div class="columns">
-				<div class="left_column">
+				<div class="col">
 					<p>&ldquo;... [what makes Daniel so valuable] is that he has confidence and courage, always unafraid to voice his opinion when the easy path is to be silent and go with the flow ...&rdquo;</p>
 					— Trey Harvin, CEO, <a href="http://mtld.mobi">dotMobi</a>
 				</div>
-				
-				<div class="right_column">
+
+				<div class="col">
+					<p>&ldquo;... His energy, positive attitude and readiness to put his hand to things was extremely helpful ...&rdquo;</p>
+					— Jo Rabin, CTO, <a href="http://mtld.mobi">dotMobi</a>
+				</div>
+
+				<div class="col">
 					<p>&ldquo;... Dan proved to an enthusiastic, highly motivated and valued member of the <a href="http://deviceatlas.com" title="DeviceAtlas" alt="DeviceAtlas">DeviceAtlas</a> team. Definitely a valuable resource for any company to have on board ...&rdquo;</p>
 					— Martin Pegman, Operations Manager, <a href="http://mtld.mobi">dotMobi</a>
 				</div>
