New design for danielhunt.ie I know, it looks incredible, doesn't it?

--- a/index.html
+++ b/index.html
@@ -9,49 +9,31 @@
 	<meta name="description" content="Daniel Hunt" />
 	<meta name="viewport" content="width=device-width">
 
-	<link rel="stylesheet" type="text/css" href="css/main.css" media="screen"/>
+	<link rel="stylesheet" type="text/css" href="/css/main.css" media="screen"/>
 	<link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css" media="all">
 
 	<!--[if lt IE 9]>
 	<script src="js/html5shiv.js"></script>
 	<![endif]-->
-	
-	<script type="text/javascript">
-
-		var _gaq = _gaq || [];
-		_gaq.push(['_setAccount', 'UA-24981077-1']);
-		_gaq.push(['_setDomainName', '.danielhunt.ie']);
-		_gaq.push(['_trackPageview']);
-
-		(function() {
-			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		})();
-	</script>
 </head>
 <body>
 	<header>
 		<div class="wrapper">
 			<div class="logo">
-				<a class="float-l" href="/"><img class="profile_pic" src="images/profile_pic.jpg" width="36px" height="36px" /><strong id="name"> Daniel Hunt</strong></a>
+				<a class="float-l" href="/"><img class="profile_pic" src="/images/profile_pic.jpg" width="36px" height="36px" /><strong id="name"> Daniel Hunt</strong></a>
 			</div>
 
 			<nav id="menu">
 				<ul id="viewAllMenu">
-					<li class="social" id="toggleMenu"><a><i class="icon-double-angle-down"></i></a></li>
+					<li class="social" id="toggleMenu"><a><i class="fa fa-angle-double-down"></i></a></li>
 				</ul>
 
 				<ul id="menuItems">
-<!--
-					<li><a href="/blog">Blog</a></li>
-					<li><a href="/cv">Resume</a></li>
--->
 					<li><a href="mailto:daniel@danielhunt.ie">Contact</a></li>
-					<li class="social"><a href="http://ie.linkedin.com/in/danielhunt" title="LinkedIn" alt="LinkedIn" target="_blank"><i class="icon-linkedin-sign"></i></a></li>
-					<li class="social"><a href="http://github.com/danielhunt" title="GitHub" alt="GitHub" target="_blank"><i class="icon-github"></i></a></li>
-					<li class="social"><a href="http://twitter.com/danielhunt" title="Twitter" alt="Twitter" target="_blank"><i class="icon-twitter"></i></a></li>
-					<li class="social"><a href="https://www.facebook.com/daniel.hunt.7798574" title="FaceBook" alt="FaceBook" target="_blank"><i class="icon-facebook"></i></a></li>
+					<li class="social"><a href="http://ie.linkedin.com/in/danielhunt" title="LinkedIn" alt="LinkedIn" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+					<li class="social"><a href="http://github.com/danielhunt" title="GitHub" alt="GitHub" target="_blank"><i class="fa fa-github"></i></a></li>
+					<li class="social"><a href="http://twitter.com/danielhunt" title="Twitter" alt="Twitter" target="_blank"><i class="fa fa-twitter"></i></a></li>
+					<li class="social"><a href="http://www.last.fm/user/duranai" title="last.fm" alt="last.fm" target="_blank"><i class="fa fa-lastfm"></i></a></li>
 				</ul>
 			</nav>
 		</div>
@@ -59,37 +41,37 @@
 
 	<section class="page">
 		<section>
-			<h2>PHP, Javascript, Servers &amp; a dubious taste in <a href="http://www.last.fm/user/duranai" title="last.fm" alt="last.fm">music</a></h2>
+			<h2>PHP, Javascript, servers &amp; a dubious taste in <a href="http://www.last.fm/user/duranai" title="last.fm" alt="last.fm">music</a></h2>
 
-			<p class="subheading">"Daniel's primary role over the past 8 years has been as a PHP developer.<br />
+            <blockquote class="subheading">Daniel's primary role over the past 9 years has been as a PHP developer.<br />
 <br />
-His initial experience, gained through the building and running of various online communities has been added to and improved upon through his work at a number of high profile, well respected international companies, such as <a href="http://mtld.mobi/" title="dotMobi" alt="dotMobi">dotMobi</a>, <a href="http://www.hostelworld.com/" title="Hostelworld" alt="Hostelworld">Web Reservations International</a> and <a href="http://version1.ie/" title="Version1" alt="Version1">Version1</a>.<br />
+Now a senior software engineer, his initial experience, gained through the building and running of various online communities has been added to and improved upon through his work at a number of high profile, well respected international companies, such as <a href="http://www.currencyfair.com/">CurrencyFair</a>, <a href="http://mtld.mobi/" title="dotMobi" alt="dotMobi">dotMobi</a>, <a href="http://www.hostelworld.com/" title="Hostelworld" alt="Hostelworld">Web Reservations International</a> and <a href="http://version1.ie/" title="Version1" alt="Version1">Version1</a>.<br />
 <br />
-On top of his PHP skills is a deep knowledge and understanding of Linux based system administration and cloud operations - Amazon EC2 in particular."</p>
+On top of his development and architectural design skills, is a deep knowledge and understanding of Linux based system administration and cloud operations - <a href="http://aws.amazon.com/">Amazon Web Services</a> in particular.</blockquote>
 		</section>
 
 		<section>
-			<h3>What have others said about Daniel?</h3>
+			<h3>Shameless trumpet tooting</h3>
 			<div class="columns">
-				<div class="col">
-					<p>&ldquo;Daniel was an enthusiastic, hard working member of the team and his positive attitude was infectious across each of our engineers ...&rdquo;</p>
+                <section>
+                    <blockquote>Daniel was an enthusiastic, hard working member of the team and his positive attitude was infectious across each of our engineers ...</blockquote>
 					— Paul Phillips, CTO, <a href="http://scrazzl.com">scrazzl.com</a>
-				</div>
+				</section>
 
-				<div class="col">
-					<p>&ldquo;... [what makes Daniel so valuable] is that he has confidence and courage, always unafraid to voice his opinion when the easy path is to be silent and go with the flow ...&rdquo;</p>
+                <section>
+                    <blockquote>... [what makes Daniel so valuable] is that he has confidence and courage, always unafraid to voice his opinion when the easy path is to be silent and go with the flow ...</blockquote>
 					— Trey Harvin, CEO, <a href="http://mtld.mobi">dotMobi</a>
-				</div>
+				</section>
 
-				<div class="col">
-					<p>&ldquo;... His energy, positive attitude and readiness to put his hand to things was extremely helpful ...&rdquo;</p>
+                <section>
+                    <blockquote>... His energy, positive attitude and readiness to put his hand to things was extremely helpful ...</blockquote>
 					— Jo Rabin, CTO, <a href="http://mtld.mobi">dotMobi</a>
-				</div>
+				</section>
 
-				<div class="col">
-					<p>&ldquo;... Dan proved to an enthusiastic, highly motivated and valued member of the <a href="http://deviceatlas.com" title="DeviceAtlas" alt="DeviceAtlas">DeviceAtlas</a> team. Definitely a valuable resource for any company to have on board ...&rdquo;</p>
+                <section>
+                    <blockquote>... Dan proved to an enthusiastic, highly motivated and valued member of the <a href="http://deviceatlas.com" title="DeviceAtlas">DeviceAtlas</a> team. Definitely a valuable resource for any company to have on board ...</blockquote>
 					— Martin Pegman, Operations Manager, <a href="http://mtld.mobi">dotMobi</a>
-				</div>
+				</section>
 			</div>
 		</section>
 	</section>
@@ -103,13 +85,27 @@ On top of his PHP skills is a deep knowledge and understanding of Linux based sy
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script>
-		var menuItems = $('#menuItems');
+        $(document).ready(function(){
+            var menuItems = $('#menuItems');
 
-		$('#toggleMenu').click(function(e){
-			menuItems.toggle();
+            $('#toggleMenu').click(function(e){
+                menuItems.toggle();
 
-			e.preventDefault();
-		});
+                e.preventDefault();
+            });
+        });
+	</script>
+	<script type="text/javascript">
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-24981077-1']);
+		_gaq.push(['_setDomainName', '.danielhunt.ie']);
+		_gaq.push(['_trackPageview']);
+
+		(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
 	</script>
 </body>
 </html>
